feat: Добавлен prettier конфиг, prettify обработка файлов

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -30,8 +30,8 @@
 
   .error {
     width: 100%;
-    margin-top: .25rem;
-    font-size: .875rem;
+    margin-top: 0.25rem;
+    font-size: 0.875rem;
     color: #dc3545;
   }
 }
