--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/src/assets/images/background.jpg");
+  background-image: url('/src/assets/images/background.jpg');
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
@@ -8,7 +8,7 @@ body {
 }
 
 body > div {
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 h1 {
